# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.565 2006/02/09 00:46:11 rocket Exp $

  09 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix indentation issues

  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc34.

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  add additional console less entry when consoles are chosen for ppc64

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix kernelopts and extraversion env variable exports

  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Rearranged generation of /usr/livecd/systempkgs.txt for the LiveCD. Thanks
  to Andrew Gaffney for spotting this.  This is 2.0_rc33.

  07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Changing the way we determine if extraversion is set. This is catalyst
  2.0_rc32.

  07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Change net.ethX links to link to net.lo instead of net.eth0.

  07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/stage4_template.spec:
  Fixed rcadd example for stage4.  Blame rajiv.

  06 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc31.

  05 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added copy of /usr/portage/eclass for the Installer. Thanks to Andrew
  Gaffney for pointing me in the right direction.

  03 Feb 2006; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  change all occurrences of ${clst_livecd_cdfstype} with ${clst_fstype}

  02 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc30.

  02 Feb 2006; Eric Edgar <rocket@gentoo.org>
  examples/livecd-stage2_template.spec: